--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ img{
   font-family: Arial, Helvetica, sans-serif;
   transition: all .1s ease;
   opacity: 0;
+  padding: 3px;
 }
 
 input{
@@ -151,7 +152,7 @@ input{
         flex-direction: column;
     }
     h5{
-        padding-left: 0px;
+        padding-top: 0px;
     }
     .text{
         bottom: 70px;
