--- a/style.css
+++ b/style.css
@@ -33,8 +33,7 @@ body{
     max-width: 1024px;
     max-height: 768px;
     background-color: #a49e59;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
 }
 .slider-wrapper{
     border-radius: 20px;
@@ -74,7 +73,7 @@ img{
   border-radius: 5px;
   background-color: #FFFFFF;
   font-family: Arial, Helvetica, sans-serif;
-  transition: all .1s ease;
+  transition: all .5s ease;
   opacity: 0;
   padding: 3px;
 }
