--- a/style.css
+++ b/style.css
@@ -83,9 +83,19 @@ input{
     visibility: hidden;
 }
 
+a{
+    color: aqua;
+    text-decoration: underline;
+    cursor: pointer;
+}
 
-
-
+.nav{
+    position: absolute;
+    left: -5px;
+    top: -5px;
+    height: 30px;
+    width: 30px;
+}
 
 .nav-background{
     height: 50px;
@@ -100,7 +110,7 @@ input{
     height: 20px;
     width: 20px;
     background-color: rgb(255, 255, 255);
-    margin: 5px;
+    /* margin: 5px; */
     cursor: pointer;
     transition: all .4s ease;
 }
@@ -112,7 +122,7 @@ input{
     height: 20px;
     width: 20px;
     background-color: rgb(255, 255, 255);
-    margin: 5px;
+    /* margin: 5px; */
     cursor: pointer;
     transition: all .4s ease;
 }
@@ -124,7 +134,7 @@ input{
     height: 20px;
     width: 20px;
     background-color: rgb(255, 255, 255);
-    margin: 5px;
+    /* margin: 5px; */
     cursor: pointer;
     transition: all .4s ease;
 }
@@ -136,7 +146,7 @@ input{
     height: 20px;
     width: 20px;
     background-color: rgb(255, 255, 255);
-    margin: 5px;
+    /* margin: 5px; */
     cursor: pointer;
     transition: all .4s ease;
 }
